metadata/force-app/main/default/objects/CustomName_jYLGy__c/CustomName_jYLGy__c.object-meta.xml
<CustomObject>
    <description>Description_ArzlL</description>
    <label>CustomLabel_WTnWx</label>
    <nameField>
        <label>CustomLabel_WTnWx</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_WTnWxs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>