metadata/force-app/main/default/objects/CustomName_jYLGy__c/fields/CustomField_cYeDV__c.field-meta.xml
<CustomField>
    <fullName>CustomField_cYeDV__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldDAkaA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>