metadata/force-app/main/default/objects/CustomName_jYLGy__c/fields/CustomField_OkSol__c.field-meta.xml
<CustomField>
    <fullName>CustomField_OkSol__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldyZzQB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>